package de.cunc.autochef.domain.util.io;

public interface InputReader {

  String readLine();

}
